# yolo-experiments

./: .gitignore  pyproject.toml
exp01-basic/: README.md  basic-v2.py  basic.py  check_gpu.py  main.py
exp01-basic/output-inference/city-street/labels/: car.txt
exp01-basic/output-inference/predict/labels/: car.txt
